# test_for_senior_in_3d_team

./: .gitattributes  Dockerfile  README.md  TASK.md  main.py  pyproject.toml
api/: __init__.py  server.py
artifacts/angles/: estimated_angles_3options.csv  estimated_angles_3options_axis.csv  estimated_angles_3options_gpa.csv  estimated_angles_3options_reference.csv
baseline/: sequential_ellipse_baseline.py
model/: __init__.py  angle_regressor_3d.py  train_angle_regressor.py
scripts/: build_image_grid_html.py  eda_nifti_dataset.py  estimate_head_angles.py  evaluate.py  extract_landmarks.py  prepare_rotation_visualizations.py  process.py  pseudo_label_stats.py  visualize_landmarks_on_masks.py  visualize_nifti_dataset.py
